# MaintainableJNI

./: settings.gradle.kts
PT-1/RestaurantSerializer/: settings.gradle.kts
PT-1/RestaurantSerializer/app/: build.gradle.kts
PT-1/RestaurantSerializer/app/src/main/cpp/: CMakeLists.txt
PT-1/RestaurantSerializer/app/src/main/cpp/core/: RestaurantNative.cpp
PT-1/RestaurantSerializer/app/src/main/cpp/jni/shadowClasses/: AddressShadow.h  MenuItemShadow.h  OpeningHourShadow.h  RestaurantShadow.h
PT-1/RestaurantSerializer/app/src/main/res/values/: strings.xml  themes.xml
PT-1/app/src/androidTest/java/com/voidmemories/restaurant_serializer/: ExampleInstrumentedTest.kt
PT-1/app/src/main/: AndroidManifest.xml
PT-1/app/src/main/cpp/jni/: jni.cpp
PT-1/app/src/main/java/com/voidmemories/restaurant_serializer/: DataModels.kt  ExternalFunctions.kt
PT-1/app/src/test/java/com/voidmemories/restaurant_serializer/: ExampleUnitTest.kt
PT-1/gradle/wrapper/: gradle-wrapper.properties
app/: build.gradle.kts
app/src/androidTest/java/com/voidmemories/maintainable_jni/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/voidmemories/maintainable_jni/jni/: JniString.h  NetworkingShadowClass.h
app/src/main/java/com/voidmemories/maintainable_jni/kotlin/: MainActivity.kt  Networking.kt
app/src/main/java/com/voidmemories/maintainable_jni/kotlin/ui/theme/: Color.kt  (+2 more)
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/voidmemories/maintainable_jni/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
(+1 files in other folders)
